fixed post spacing

--- a/css/main.css
+++ b/css/main.css
@@ -824,10 +824,15 @@ article {
   article h2,
   article p {
     margin: 10px 30px;
-    line-height: 1.5em;
     text-align: left; }
+  article h1, article h2 {
+    line-height: 1rem;
+    margin-bottom: 15px; }
+  article h2 {
+    margin-top: 30px; }
   article p {
-    font-size: 2em; }
+    font-size: 2em;
+    line-height: 1.5em; }
   article img {
     width: 100%;
     box-shadow: 0px 0px 50px rgba(0, 0, 50, 0.15); }
